fixed home page

--- a/components/src/components/tve/molecules/hero-cover/styles.css
+++ b/components/src/components/tve/molecules/hero-cover/styles.css
@@ -27,7 +27,9 @@
     margin: 0 auto;
   }
 }
-
+.imageContainer {
+  width: 100%;
+}
 /******************************************************************************/
 /* Fading cover */
 /******************************************************************************/
@@ -129,6 +131,7 @@
 }
 
 .coverImage {
+  width: 100%;
   @media (--small-down) {
     display: none;
   }
