--- a/components/src/site-builder/tve/components/hero/styles.css
+++ b/components/src/site-builder/tve/components/hero/styles.css
@@ -93,6 +93,18 @@
     margin: 0 4px;
   }
 }
+.goToPrev:hover {
+  background-color: aliceblue;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.goToNext:hover {
+  background-color: aliceblue;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
 
 .goToNext {
   margin-left: auto;
